masodik tabla kesz

--- a/Algoritmusok.html
+++ b/Algoritmusok.html
@@ -25,11 +25,14 @@
 
     <table id="table2">
         <th id="th2">
-           <img src="figyelmezteto.png" width="20px" height="20px" alt="figyelmeztető icon"> Idő és memóriakorlátozások
+           <img src="figyelmezteto.png" width="25px" height="18px" alt="figyelmeztető icon"> Idő és memóriakorlátozások
         </th>
-        <tr>
+        <tr >
             <td>
-                Az alábbi feladatokban algoritmusokat kell elkészíteni. Minden algoritmushoz tartozik egy kiinduló Python kód, amely tartalmaz unittest teszteket is.
+                A feladatok megoldásánál figyelj a megadott idő- és memóriakorlátozásokra!
+            
+                <li id="elsosor">Időlimit: 1,00 sec</li>
+                <li>Memória limit: 512 MB</li>
             </td>
         </tr>
     </table>
