--- a/Algoritmusok.html
+++ b/Algoritmusok.html
@@ -18,7 +18,7 @@
         </th>
         <tr>
             <td>
-                Az alábbi feladatokban algoritmusokat kell elkészíteni. Minden algoritmushoz tartozik egy kiinduló Python kód, amely tartalmaz unittest teszteket is.
+                <div> Az alábbi feladatokban algoritmusokat kell elkészíteni. Minden algoritmushoz tartozik egy kiinduló Python kód, amely tartalmaz <mark> unittest</mark> teszteket is.</div>
             </td>
         </tr>
     </table>
